fix codebox overflow

--- a/site/public/css/gradeable-notebook.css
+++ b/site/public/css/gradeable-notebook.css
@@ -99,7 +99,6 @@ textarea.sa-box {
 img {
     margin-top: 10px;
 }
-
 /* stylelint-disable-next-line selector-class-pattern */
 .CodeMirror {
     /* stylelint-disable-next-line declaration-no-important */
@@ -114,18 +113,19 @@ img {
 
 /* stylelint-disable-next-line selector-class-pattern */
 .small-mirror .CodeMirror {
-    resize: horizontal;
+    resize: both;
     min-width: 150px;
     max-width: 50em;
+    overflow: scroll;
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
 .large-mirror .CodeMirror {
-    resize: vertical;
+    resize: both;
     min-height: 30px;
     max-height: 80vh;
+    overflow: scroll;
 }
-
 /* Fixes Safari spacing issue */
 .notebook fieldset legend {
     -webkit-margin-top-collapse: separate;
